--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.0",
-        "mongoose": "^6.8.2"
+        "mongoose": "^6.8.2",
+        "remove": "^0.1.5"
     },
     "devDependencies": {
         "nodemon": "^2.0.20"
