--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^6.8.2",
+        "nodemailer": "^6.9.2",
         "remove": "^0.1.5"
     },
     "devDependencies": {
